# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-22 16:45:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-142

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-142


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs
     libsrc/MissingH/Network/SocketServer.hs


2004-12-22 16:41:05 GMT	John Goerzen <jgoerzen@complete.org>	patch-141

    Summary:
      Made SocketServer more versatile
    Revision:
      missingh--head--0.7--patch-141


    new files:
     ftptest.hs

    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs
     libsrc/MissingH/Network/SocketServer.hs


2004-12-22 02:58:04 GMT	John Goerzen <jgoerzen@complete.org>	patch-140

    Summary:
      Checkpointing
    Revision:
      missingh--head--0.7--patch-140


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Combinators.hs
     testsrc/HVFStest.hs


2004-12-22 02:46:33 GMT	John Goerzen <jgoerzen@complete.org>	patch-139

    Summary:
      Fixing and testing chroot
    Revision:
      missingh--head--0.7--patch-139


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Combinators.hs
     testsrc/HVFStest.hs testsrc/Network/FTP/Parsertest.hs


2004-12-21 22:32:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-138

    Summary:
      Added implementations for remaining non-transfer commands.
    Revision:
      missingh--head--0.7--patch-138


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 22:22:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-137

    Summary:
      Added a bunch of commands
    Revision:
      missingh--head--0.7--patch-137


    modified files:
     ChangeLog libsrc/MissingH/Network/FTP/Server.hs


2004-12-21 22:02:45 GMT	John Goerzen <jgoerzen@complete.org>	patch-136

    Summary:
      Added rename features
    Revision: